search bar now cleared on reload and on save if there was a search; page can now be manually entered; fixed bug where old sort order was recovered after editing and then either reverting or switching pages; page automatically adjusted to last page, if current page went out of bounds as a result of deletion or reload

--- a/style.css
+++ b/style.css
@@ -148,10 +148,18 @@ td {
 }
 .page-number{
   display: inline-block;
-  vertical-align:bottom;
   margin-bottom:1px;
   margin-left:4px;
   margin-right:4px;
+}
+.page-input{
+  height:15px;
+  width:30px;
+}
+.num-pages{
+  display:inline-block;
+  position: relative;
+  top:1px;
 }
 
 /*.task-button-wrapper{
@@ -180,9 +188,11 @@ td {
 }
 
 button, .table-button{
+  border-radius:4px;
+}
+button :not(:disabled){
   cursor: pointer;
   cursor: hand;
-  border-radius:4px;
 }
 button{
   border-width:2px;
